[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cat-vader"
dynamic = ["version"]
description = 'A tool for classifying and analyzing social media data using LLMs and vision models'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = ["llm", "social media", "text classification", "content moderation", "structured output"]
authors = [
  { name = "Chris Soria", email = "chrissoria@berkeley.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pandas",
  "tqdm",
  "requests",
  "openai",
  "anthropic",
  "perplexityai"
]

[project.optional-dependencies]
pdf = ["PyMuPDF>=1.23.0"]

[project.urls]
Documentation = "https://github.com/chrissoria/cat-vader#readme"
Issues = "https://github.com/chrissoria/cat-vader/issues"
Source = "https://github.com/chrissoria/cat-vader"

[tool.hatch.version]
path = "src/catvader/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/catvader tests}"

[tool.hatch.build.targets.wheel]
packages = ["src/catvader"]
include = [
    "src/catvader/**/*.py",
    "src/catvader/images/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/catvader/**/*.py",
    "src/catvader/images/*",
]

[tool.coverage.run]
source_pkgs = ["catvader", "tests"]
branch = true
parallel = true
omit = [
  "src/catvader/__about__.py",
]

[tool.coverage.paths]
catvader = ["src/catvader", "*/cat-vader/src/catvader"]
tests = ["tests", "*/cat-vader/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
